hosting and other

--- a/javascript-practice/index.html
+++ b/javascript-practice/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>var,let,const</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
@@ -13,6 +12,8 @@
         </h1>
     </div>
     <script src="./map_filter_reduce.js"></script>
+    <script src="./var_let_const.js"></script>
+    <script src="./Hositing,scope,callback,arrow-functioon.js"></script>
     
 </body>
 </html>
